--- a/ui/stylesheet.css
+++ b/ui/stylesheet.css
@@ -34,11 +34,11 @@ DeckButton #state {
   background-color: lightgreen;
 }
 
-DeckButton #state[state='expedition'] {
+DeckButton #state[state="expedition"] {
   background-color: blue;
 }
 
-DeckButton #state[state='not ready'] {
+DeckButton #state[state="not ready"] {
   background-color: orange;
 }
 
